--- a/untitled/html/index.html
+++ b/untitled/html/index.html
@@ -60,5 +60,34 @@
   </div>
 </div>
 <!--ABOUT FINISH-->
+<!--LINE START-->
+<div class="line">
+  <span class="limit"></span>
+  <span class="line-circle">01</span>
+</div>
+<!--LINE FINISH-->
+<div class="container">
+  <div class="content">
+    <img src="/img/13.jpg" alt="">
+    <img src="/img/14.jpg" alt="">
+    <img src="/img/15.jpg" alt="">
+    <img src="/img/16.jpg" alt="">
+  </div>
+  <div class="information">
+    <h4>BUILT FOR MODERN USE</h4>
+    <h2>Smarter meetings, all <br> in on place</h2>
+    <p>Send messages, share files, show your screen, and record your<br>
+      meeting -all in on workspace. Control who can join with invite-<br>
+      only teem access, data encrytion, and data export.
+    </p>
+  </div>
+</div>
+
+
+  <div class="line">
+    <span class="limit"></span>
+    <span class="line-circle">02</span>
+  </div>
+
 </body>
 </html>
