--- a/untitled/html/index.html
+++ b/untitled/html/index.html
@@ -66,12 +66,14 @@
   <span class="line-circle">01</span>
 </div>
 <!--LINE FINISH-->
+<!--CONTENT START-->
 <div class="container">
   <div class="content">
-    <img src="/img/13.jpg" alt="">
-    <img src="/img/14.jpg" alt="">
-    <img src="/img/15.jpg" alt="">
-    <img src="/img/16.jpg" alt="">
+    <img src="/img/13.jpg">
+    <img src="/img/14.jpg">
+    <img src="/img/15.jpg">
+    <img src="/img/16.jpg">
+    <img src="/img/17.jpg">
   </div>
   <div class="information">
     <h4>BUILT FOR MODERN USE</h4>
@@ -88,6 +90,17 @@
     <span class="limit"></span>
     <span class="line-circle">02</span>
   </div>
+<!--FOOTER START-->
+<footer class="footer">
+  <div class="footer-picture"></div>
+  <div class="footer-info">
+    <h4>Experience more <br> together</h4>
+    <p>Stay connected with reliable HD meetings <br>
+      and unlimited one-on-one and group video sission.
+    </p>
+    <a href="#">Download<span>v1.3</span></a>
+  </div>
 
+</footer>
 </body>
 </html>
